[project]
name = "deepseek2api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.137.1",
    "httpx>=0.28.1",
    "playwright>=1.60.0",
    "python-dotenv>=1.2.2",
    "seleniumbase>=4.49.14",
    "uvicorn>=0.49.0",
]
